<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.szte.wmm.greenkiwi.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_shopFragment"
            app:destination="@id/shopFragment" />
    </fragment>

    <fragment
        android:id="@+id/navigation_activities"
        android:name="com.szte.wmm.greenkiwi.ui.activities.ActivitiesFragment"
        android:label="@string/title_activities"
        tools:layout="@layout/fragment_activities" >
        <action
            android:id="@+id/action_navigation_activities_to_navigation_activity_detail"
            app:destination="@id/navigation_activity_detail" />
    </fragment>

    <fragment
        android:id="@+id/navigation_history"
        android:name="com.szte.wmm.greenkiwi.ui.history.HistoryFragment"
        android:label="@string/title_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_settings"
        android:name="com.szte.wmm.greenkiwi.ui.settings.SettingsFragment"
        android:label="@string/title_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/navigation_activity_detail"
        android:name="com.szte.wmm.greenkiwi.ui.activitydetail.ActivityDetailFragment"
        android:label="fragment_activity_detail">
        <argument
            android:name="selectedActivity"
            app:argType="com.szte.wmm.greenkiwi.repository.domain.Activity" />
        <action
            android:id="@+id/action_navigation_activity_detail_to_navigation_activities"
            app:destination="@id/navigation_activities" />
    </fragment>
    <fragment
        android:id="@+id/shopFragment"
        android:name="com.szte.wmm.greenkiwi.ui.shop.ShopFragment"
        android:label="ShopFragment" >
        <action
            android:id="@+id/action_shopFragment_to_navigation_home"
            app:destination="@id/navigation_home" />
    </fragment>
</navigation>