<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="android.view.View" />

        <variable
            name="homeViewModel"
            type="com.szte.wmm.greenkiwi.ui.home.HomeViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/home_parent_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/primaryColor"
        tools:context=".ui.home.HomeFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/gold_layout"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:background="@drawable/sticker_background"
            android:elevation="6dp"
            android:paddingStart="10dp"
            android:paddingEnd="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/gold_image"
                android:layout_width="55dp"
                android:layout_height="55dp"
                android:background="@android:color/transparent"
                android:contentDescription="@string/home_view_gold_description"
                android:scaleType="centerInside"
                android:src="@drawable/gold_image"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/player_gold_text"
                app:layout_constraintTop_toTopOf="parent"
                tools:src="@drawable/gold_image" />

            <TextView
                android:id="@+id/player_gold_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textColor="@color/textColorOnStickerBackground"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="1000000" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            android:id="@+id/pet_nickname_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:background="@drawable/sticker_background"
            android:padding="5dp"
            android:textAlignment="center"
            android:textColor="@color/textColorOnStickerBackground"
            android:textSize="20sp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gold_layout"
            tools:text="Your kiwi, Momo loves you!" />

        <EditText
            android:id="@+id/pet_nickname_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:autofillHints="textPersonName"
            android:background="@drawable/sticker_background"
            android:padding="5dp"
            android:ems="10"
            android:hint="@string/pet_nickname_hint"
            android:inputType="textPersonName"
            android:textAlignment="center"
            android:textColor="@color/textColorOnStickerBackground"
            android:textSize="20sp"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/gold_layout" />

        <Button
            android:id="@+id/pet_nickname_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/pet_nickname_button_text"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_nickname_edit" />

        <ImageView
            android:id="@+id/pet_image"
            android:layout_width="200dp"
            android:layout_height="300dp"
            android:layout_marginTop="55dp"
            android:background="@android:color/transparent"
            android:contentDescription="@string/home_view_pet_description"
            android:src="@drawable/egg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_nickname_text"
            tools:src="@drawable/egg" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/stat_layout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/sticker_background"
            android:elevation="6dp"
            android:padding="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/pet_image">

            <View
                android:id="@+id/empty_exp_bar"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:background="@drawable/sticker_background"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/collected_exp_bar"
                android:layout_width="1dp"
                android:layout_height="26dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/exp_bar"
                app:layout_constraintBottom_toBottomOf="@id/empty_exp_bar"
                app:layout_constraintStart_toStartOf="@id/empty_exp_bar"
                app:layout_constraintTop_toTopOf="@id/empty_exp_bar" />

            <TextView
                android:id="@+id/exp_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textColor="@color/textColorOnStickerBackground"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/empty_exp_bar"
                app:layout_constraintEnd_toEndOf="@id/empty_exp_bar"
                app:layout_constraintStart_toStartOf="@id/empty_exp_bar"
                app:layout_constraintTop_toTopOf="@id/empty_exp_bar"
                tools:text="123/999 EXP" />

            <View
                android:id="@+id/empty_hunger_bar"
                android:layout_width="300dp"
                android:layout_height="30dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/sticker_background"
                android:visibility="@{homeViewModel.levelUps &lt; 4 ? View.GONE : View.VISIBLE}"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_exp_bar" />

            <View
                android:id="@+id/filled_hunger_bar"
                android:layout_width="1dp"
                android:layout_height="26dp"
                android:layout_marginStart="2dp"
                android:background="@drawable/hunger_bar"
                android:visibility="@{homeViewModel.levelUps &lt; 4 ? View.GONE : View.VISIBLE}"
                app:layout_constraintBottom_toBottomOf="@id/empty_hunger_bar"
                app:layout_constraintStart_toStartOf="@id/empty_hunger_bar"
                app:layout_constraintTop_toTopOf="@id/empty_hunger_bar" />

            <TextView
                android:id="@+id/hunger_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:textAlignment="center"
                android:textColor="@color/textColorOnStickerBackground"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="@id/empty_hunger_bar"
                app:layout_constraintEnd_toEndOf="@id/empty_hunger_bar"
                app:layout_constraintStart_toStartOf="@id/empty_hunger_bar"
                app:layout_constraintTop_toTopOf="@id/empty_hunger_bar"
                tools:text="99/100" />

            <TextView
                android:id="@+id/player_level_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textAlignment="center"
                android:textColor="@color/textColorOnStickerBackground"
                android:textSize="20sp"
                app:layout_constraintEnd_toStartOf="@id/feed_pet_button"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/empty_hunger_bar"
                tools:text="Level 99" />

            <Button
                android:id="@+id/feed_pet_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/feed_pet_button_text"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/player_level_text"
                app:layout_constraintTop_toBottomOf="@id/empty_hunger_bar" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>